Fix: Management Bar Collapse can't click form elements in dropdown

--- a/src/scss/lexicon-base/_management-bar.scss
+++ b/src/scss/lexicon-base/_management-bar.scss
@@ -260,6 +260,10 @@
 			overflow-y: visible;
 		}
 	}
+
+	.dropdown-backdrop {
+		position: relative;
+	}
 }
 
 .management-bar-nav {
